--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
     "dotenv": "16.4.5",
     "jsonwebtoken": "9.0.2",
     "lucide-react": "0.460.0",
-    "next": "15.0.3",
+    "next": "^16.1.6",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
     "pdf-to-png-converter": "^3.14.0",
     "pg": "8.13.1",
     "postcss": "8.4.49",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-hook-form": "7.53.2",
     "recharts": "2.13.3",
     "sharp": "^0.34.5",
@@ -73,7 +73,7 @@
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^5.1.4",
     "eslint": "9.15.0",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "^16.1.6",
     "fast-check": "^4.5.3",
     "jsdom": "^28.1.0",
     "node-loader": "^2.1.0",
